# phonebook

./: index.html  package-lock.json  package.json
.github/workflows/: release.yaml
db/: phonebook.db
src/: App.css  App.jsx  main.jsx
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-09-27-092618_create_numbers/: down.sql  up.sql
src-tauri/src/: controller.rs  db.rs  main.rs  models.rs  schema.rs
